# serverless-wedding

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  serverless.yml
serverless-wedding-api/: .gitignore  Cargo.toml  package-lock.json  package.json  serverless.yml
serverless-wedding-api/create/: Cargo.toml
serverless-wedding-api/create/src/: main.rs  rsvp.rs
serverless-wedding-api/hello/src/: main.rs
serverless-wedding-api/read/: Cargo.toml
serverless-wedding-api/src/: batch-create.rs  controllers.rs  create.rs  household-create.rs  household-get.rs  lib.rs  models.rs  read.rs  rsvp-get.rs  rsvp-patch.rs  rsvp.rs
serverless-wedding-api/src/models/: household.rs  mod.rs  person.rs  rsvp.rs
serverless-wedding-frontend/: README.md  config.toml  nuxt.config.js  package-lock.json  package.json
serverless-wedding-frontend/components/molecules/: card.vue
serverless-wedding-frontend/components/organisms/: chat-bubble.vue  menu.vue  registry-item.vue  rsvp-card.vue
serverless-wedding-frontend/content/: _index.md  about.md  rsvp.md
serverless-wedding-frontend/layouts/: default.vue
serverless-wedding-frontend/pages/: bash.vue  index.vue  logistics.vue  our-story.vue  registry.vue
serverless-wedding-frontend/pages/rsvp/: error.vue  (+1 more)
serverless-wedding-frontend/sass/: base.scss  colors.scss  header.scss  home.scss  logo.scss  style.scss  title.scss
serverless-wedding-frontend/static/: sw.js
serverless-wedding-frontend/store/: rsvp.js
serverless-wedding-frontend/templates/: index.html  page.html
serverless-wedding-infrastructure/: .gitignore  config.dev.json  config.prod.json  main.tf  outputs.tf
serverless-wedding-infrastructure/backend/: api.tf  dynamo_db.tf  main.tf  outputs.tf  rsvp_handler.tf
serverless-wedding-infrastructure/frontend/: cloudfront_distribution.tf  main.tf  route_53.tf  s3_bucket.tf
serverless-wedding-rsvp-notifications/: .gitignore  Pipfile  handler.py  package-lock.json  serverless.yml
src/: lib.rs  models.rs
(+10 files in other folders)
