[package]
name = "serverless-wedding-api"
version = "0.1.0"
edition = "2018"

[dependencies]
lambda_runtime = { git = "https://github.com/awslabs/aws-lambda-rust-runtime.git" }
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime.git" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_dynamodb = "0.2.0"
rusoto_core = "0.35.0"
rusoto_dynamodb = "0.35.0"
uuid = { version = "0.7", features = ["v4", "serde"] }


[[bin]]
name = "batch-create"
path = "src/batch-create.rs"