[package]
name = "serverless-wedding-api"
version = "0.1.0"
edition = "2018"

[dependencies]
lambda_runtime = { git = "https://github.com/awslabs/aws-lambda-rust-runtime.git" }
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime.git" }
log = "0.4.6"
simple_logger = "1.0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_dynamodb = "0.2.0"
rusoto_core = "0.36.0"
rusoto_dynamodb = "0.36.0"
uuid = { version = "0.7", features = ["v4", "serde"] }
url = "1.7.2"


[[bin]]
name = "household-create"
path = "src/household-create.rs"

[[bin]]
name = "household-get"
path = "src/household-get.rs"

[[bin]]
name = "rsvp-patch"
path = "src/rsvp-patch.rs"

[[bin]]
name = "rsvp-get"
path = "src/rsvp-get.rs"

